# rustimer

./: Cargo.toml  README.md
src/: main.rs
tauri-app/: package.json  pnpm-lock.yaml
tauri-app/src/: App.vue
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/src/: lib.rs
websockets-http2/: Cargo.toml
websockets-http2/src/: db.rs  main.rs  node.rs  websocket.rs  worker.rs
websockets-http2/src/api/: count.rs  mod.rs  post.rs  race.rs
websockets-http2/src/enums/: command.rs
websockets-http2/src/structs/: mod.rs  node.rs  post.rs  race.rs  state.rs
