[package]
name = "example-websockets-http2"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.8", features = ["ws", "http2"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version="0.8.3", features = [ "sqlite", "runtime-tokio", "tls-native-tls" ] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.134"
serialport = "4.2"
chrono = "0.4"
rand = "0.8"

[features]
mock = []
